Archive2/5a/7554f6168125c9/output
main.cpp:11:4: error: expected the class name after '~' to name the enclosing class
D::~B() {}
   ^
1 error generated.
