Archive2/5a/7554f6168125c9/main.cpp
#include <iostream>

struct B {
    virtual ~B() = default;  
};

struct D : B {
    ~D();  
};

D::~B() {}